fix navbar alignment

--- a/src/styles/Navbar.module.scss
+++ b/src/styles/Navbar.module.scss
@@ -2,12 +2,18 @@
 
 .navbar {
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  padding: 30px 60px;
+  justify-content: center;
+  padding: 30px 0;
   box-shadow: 2px 3px 5px -2px rgba(179, 164, 164, 0.75);
   background: #fff;
+
+  .navContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 90%;
+  }
 
   .logoLink {
     display: flex;
